--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@ h1 {
   font-size: 1.875rem;
   font-weight: 800;
 }
+
+h2 {
+  font-size: 1.5rem; /* 24px */
+  line-height: 2rem; /* 32px */
+  font-weight: 700;
+}
