--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5rem; /* 24px */
-  line-height: 2rem; /* 32px */
-  font-weight: 700;
+  font-size: 1.5em; /* 24px */
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  font-weight: bold;
 }
