--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,12 @@ nav{
  
 h1 {
   font-size: 1.875rem;
-  font-weight: 800;
+  font-weight: bold;
 }
 
 h2 {
-  font-size: 1.5rem; /* 24px */
-  line-height: 2rem; /* 32px */
-  font-weight: 700;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  font-weight: bold;
 }
