--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,9 @@ nav{
 @tailwind utilities;
  
 h1 {
-  font-size: 1.875rem;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
   font-weight: bold;
 }
 
